<resources>
    <string name="app_name">Food Waste Management</string>
    <string name="next">NEXT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">You are offline. \nPlease check your Internet
        connection.</string>
    <string name="inr">\u20B9</string>
    <string name="action_invoices">Invoices</string>
    <string name="action_estimate">Estimate</string>
    <!--login strt-->
    <string name="sign_out">Sign Out</string>
    <string name="hint_phone_number">Enter Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="mobile_number">Enter mobile number</string>
    <string name="common_signin_button_text">Login</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="wrong_verification_code_alert">You have entered the wrong verification code</string>
    <string name="ph_number_empty_alert">Ph number can not be empty</string>
    <string name="otp_blank_alert">otp number can not be empty</string>
    <string name="otp_send_message">verification code sent to your entered mobile number! please check</string>
    <string name="sms_qutoa_exceeded_alert">The SMS quota for the project has been exceeded</string>
    <string name="please_wait">Please wait</string>
    <string name="phone_number_successfully_verified_thankyou">Phone Number successfully verified!! Thankyou</string>
    <string name="attheratetax">\@Tax</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="back">BACK</string>

    <string name="login">Login</string>
    <string name="register_with_email">NGO Register with Email</string>
    <string name="reset_password">Reset password</string>
    <string name="register">Register now</string>
    <string name="send_password">Send Password</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">I forgot the password</string>
    <string name="forgot_password_title">Forgot your password?</string>
    <string name="forgot_password_mensage">No problem! We will send you a link to reset your password. Please enter your email address</string>
    <string name="remember">Remember me</string>
    <string name="create_your_account">Create your account</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="zip_code">Zip Code</string>

    <string name="weak">Weak</string>
    <string name="medium">Medium</string>
    <string name="strong">Strong</string>
    <string name="very_strong">Very Strong</string>


    <!--next app-->


    <string name="value_any_category">All food</string>
    <string name="value_any_city">Anywhere</string>
    <string name="value_any_price">Any price</string>

    <string name="price_1">$</string>
    <string name="price_2">$$</string>
    <string name="price_3">$$$</string>

    <string name="label_category">Category</string>
    <string name="label_city">City</string>
    <string name="label_price">Price</string>
    <string name="label_sort_by">Sort By</string>

    <string name="fmt_num_ratings" translatable="false">(%d)</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="header_filters">Filter</string>
    <string name="search">Search</string>

    <string name="sort_by_rating">Sort by Rating</string>
    <string name="sort_by_popularity">Sort by Popularity</string>
    <string name="sort_by_price">Sort by Price</string>

    <string name="sorted_by_rating">sorted by rating</string>
    <string name="sorted_by_price">sorted by price</string>
    <string name="sorted_by_popularity">sorted by popularity</string>

    <string name="add_random_items">Add Random Items</string>
    <!--<string name="sign_out">Sign Out</string>-->
    <string name="delete_all">Delete All</string>
    <string name="divider_bullet">•</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="message_no_results">Oops, couldn\'t find any results\nthat matched your filter</string>
    <string name="message_no_reviews">Be the first to leave a review!</string>
    <string name="hint_review">How was your experience?</string>
    <string name="submit">Submit</string>
    <string name="filter_add_review">Add review</string>

    <!-- Types of food I could think of in 5 minutes -->
    <string-array name="categories">
        <item>@string/value_any_category</item>

        <item>Brunch</item>
        <item>Burgers</item>
        <item>Coffee</item>
        <item>Deli</item>
        <item>Dim Sum</item>
        <item>Indian</item>
        <item>Italian</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Pizza</item>
        <item>Ramen</item>
        <item>Sushi</item>
    </string-array>

    <!-- 50 most populous cities in the US -->
    <string-array name="cities">
        <item>@string/value_any_city</item>
        <item>Albuquerque</item>
        <item>Arlington</item>
        <item>Atlanta</item>
        <item>Austin</item>
        <item>Baltimore</item>
        <item>Boston</item>
        <item>Charlotte</item>
        <item>Chicago</item>
        <item>Cleveland</item>
        <item>Colorado Springs</item>
        <item>Columbus</item>
        <item>Dallas</item>
        <item>Denver</item>
        <item>Detroit</item>
        <item>El Paso</item>
        <item>Fort Worth</item>
        <item>Fresno</item>
        <item>Houston</item>
        <item>Indianapolis</item>
        <item>Jacksonville</item>
        <item>Kansas City</item>
        <item>Las Vagas</item>
        <item>Long Beach</item>
        <item>Los Angeles</item>
        <item>Louisville</item>
        <item>Memphis</item>
        <item>Mesa</item>
        <item>Miami</item>
        <item>Milwaukee</item>
        <item>Nashville</item>
        <item>New York</item>
        <item>Oakland</item>
        <item>Oklahoma</item>
        <item>Omaha</item>
        <item>Philadelphia</item>
        <item>Phoenix</item>
        <item>Portland</item>
        <item>Raleigh</item>
        <item>Sacramento</item>
        <item>San Antonio</item>
        <item>San Diego</item>
        <item>San Francisco</item>
        <item>San Jose</item>
        <item>Tucson</item>
        <item>Tulsa</item>
        <item>Virginia Beach</item>
        <item>Washington</item>
    </string-array>

    <!-- Price filters -->
    <string-array name="prices">
        <item>@string/value_any_price</item>

        <item>@string/price_1</item>
        <item>@string/price_2</item>
        <item>@string/price_3</item>
    </string-array>

    <!-- Ways you can sort restaurants -->
    <string-array name="sort_by">
        <item>@string/sort_by_rating</item>
        <item>@string/sort_by_popularity</item>
        <item>@string/sort_by_price</item>
    </string-array>
</resources>

