<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegistration"
    android:background="@drawable/bglogin1">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageButton
                android:id="@+id/bt_Backhome_Registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/rounded_rectangle_for_buttons"
                android:padding="10dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/textView4"
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:text="Registration NGO"
                android:textColor="#000000 "
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_Backhome_Registration" />
            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:textColor="#000000 "
                android:text="@string/create_your_account"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

           <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilName_Registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/et_Name_Registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilSurname_Registration"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"

                  >

                    <EditText
                        android:id="@+id/et_Surname_Registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/surname"
                        android:inputType="text"
                         />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

              <LinearLayout
                   android:id="@+id/linearLayout9"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="25dp"
                   android:layout_marginTop="15dp"
                   android:layout_marginEnd="25dp"
                   android:gravity="center_vertical"
                   android:orientation="horizontal"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

                   <com.hbb20.CountryCodePicker
                       android:id="@+id/ccp_PhoneCode_Registration"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       app:ccp_arrowColor="@color/black"
                       app:ccp_autoDetectCountry="true"
                       app:ccp_contentColor="@color/black"
                       app:ccp_countryPreference="it,pt"
                       app:ccp_defaultNameCode="IN" />

                   <com.google.android.material.textfield.TextInputLayout
                       android:id="@+id/tilPhone_Registration"
                       android:layout_width="match_parent"
                       style="@style/TextInputLayout"
                       android:layout_height="wrap_content">
                       <EditText
                           android:id="@+id/et_Phone_Registration"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:maxLength="10"
                           android:hint="@string/phone"
                           android:inputType="phone"
                        />
                   </com.google.android.material.textfield.TextInputLayout>
               </LinearLayout>

                                      <com.google.android.material.textfield.TextInputLayout
                                          android:id="@+id/tilEmail_Registration"
                                          android:layout_width="0dp"
                                          android:layout_height="wrap_content"
                                          android:layout_marginStart="25dp"
                                          android:layout_marginTop="15dp"
                                          android:layout_marginEnd="25dp"
                                          style="@style/TextInputLayout"
                                          app:layout_constraintEnd_toEndOf="parent"
                                          app:layout_constraintStart_toStartOf="parent"
                                          app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

                                          <EditText
                                              android:id="@+id/et_Email_Registration"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
                                              android:hint="@string/email"
                                              android:inputType="textEmailAddress"
                                             />
                                      </com.google.android.material.textfield.TextInputLayout>

                                      <LinearLayout
                                          android:id="@+id/ll_Password"
                                          android:layout_width="0dp"
                                          android:layout_height="wrap_content"
                                          android:layout_marginStart="25dp"
                                          android:layout_marginTop="15dp"
                                          android:layout_marginEnd="25dp"
                                          android:orientation="vertical"
                                          app:layout_constraintEnd_toEndOf="parent"
                                          app:layout_constraintStart_toStartOf="parent"
                                          app:layout_constraintTop_toBottomOf="@+id/tilEmail_Registration">

                                          <com.google.android.material.textfield.TextInputLayout
                                              android:id="@+id/tilPassword_Registration"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              app:passwordToggleEnabled="true"
                                              style="@style/TextInputLayout"
                                              app:passwordToggleTint="#000000">

                                              <EditText
                                                  android:id="@+id/et_Password_Registration"
                                                  android:layout_width="match_parent"
                                                  android:layout_height="wrap_content"
                                                  android:hint="@string/password"
                                                  android:inputType="textPassword" />
                                          </com.google.android.material.textfield.TextInputLayout>

                                          <androidx.constraintlayout.widget.ConstraintLayout
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
                                              android:layout_marginTop="4dp">

                                              <ProgressBar
                                                  android:id="@+id/progressBar_PasswordStrength_Registration"
                                                  style="?android:attr/progressBarStyleHorizontal"
                                                  android:layout_width="0dp"
                                                  android:layout_height="wrap_content"
                                                  android:max="4"
                                                  android:progressTint="@color/black2"
                                                  app:layout_constraintBottom_toBottomOf="parent"
                                                  app:layout_constraintEnd_toStartOf="@+id/tv_PasswordStrength_Registration"
                                                  app:layout_constraintStart_toStartOf="parent"
                                                  app:layout_constraintTop_toTopOf="parent"
                                                  tools:progress="1" />

                                              <TextView
                                                  android:id="@+id/tv_PasswordStrength_Registration"
                                                  style="?attr/textAppearanceCaption"
                                                  android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content"
                                                  android:layout_weight="1"
                                                  android:textAlignment="textEnd"
                                                  app:layout_constraintBottom_toBottomOf="parent"
                                                  app:layout_constraintEnd_toEndOf="parent"
                                                  app:layout_constraintTop_toTopOf="parent"
                                                  tools:text="" />

                                          </androidx.constraintlayout.widget.ConstraintLayout>
                                      </LinearLayout>

                                                  <Button
                                                      android:id="@+id/bt_RegistrationUser"
                                                      android:layout_width="wrap_content"
                                                      android:layout_height="wrap_content"
                                                      android:layout_gravity="center_horizontal"
                                                      android:layout_marginTop="20dp"
                                                      android:backgroundTint="#361078"
                                                      android:text="@string/register"
                                                      app:icon="@drawable/ic_arrow_forward"
                                                      app:iconGravity="textEnd"
                                                      app:layout_constraintEnd_toEndOf="parent"
                                                      app:layout_constraintStart_toStartOf="parent"
                                                      app:layout_constraintTop_toBottomOf="@+id/ll_Password" />

                                                                     <ProgressBar
                                                                         android:id="@+id/progressBar_RegistrationUser"
                                                                         style="?android:attr/progressBarStyle"
                                                                         android:layout_width="wrap_content"
                                                                         android:layout_height="wrap_content"
                                                                         app:layout_constraintBottom_toTopOf="@+id/bt_RegistrationUser"
                                                                         app:layout_constraintEnd_toEndOf="parent"
                                                                         app:layout_constraintStart_toStartOf="parent"
                                                                         app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>